# git-stats-web

./: .dockerignore  .gitignore  Cargo.toml  README.md  dev.sh  dockerfile  package.json  schema.sql
src/: auth.rs  cli.rs  db.rs  errors.rs  git.rs  lib.rs  main.rs  prediction.rs  server.rs  utils.rs  ws.rs
src/templates/: base.rs  calendar.rs  mod.rs  utils.rs
src/templates/components/: example_section.rs  header.rs  home_carousel.rs  icon.rs  mod.rs  repo_card.rs
src/templates/pages/: auth.rs  calendar.rs  home.rs  mod.rs  repo_list.rs
static/: index.css  index.html  index.js  repo_card.css  search.css  svg.css  theme.css  theme.js
