[package]
name = "git-stats-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.8.0"
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "string"] }
env_logger = "0.11.3"
git2 = "0.19.0"
log = "0.4.22"
maud = "0.26.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite"] }
tokio = { version = "1.38.1", features = ["full"] }
url = "2.5.2"
